gccida/g2/swap_rtx_condition
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1711:4: error: expected ';' after expression
rtx flags_user; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1711:5: error: use of undeclared identifier 'flags_user'
rtx flags_user; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1714:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1714:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1717:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1723:1: error: use of undeclared identifier 'flags_user'
flags_user = next_flags_user( insn); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1724:7: error: use of undeclared identifier 'flags_user'
rtx = flags_user; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1725:7: error: use of undeclared identifier 'flags_user'
if ( !flags_user ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1727:16: error: use of undeclared identifier 'flags_user'
v2 = ( __int64)flags_user[2]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1748:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64)rtx[2]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1758:1: error: use of undeclared identifier 'v12'
v12 = next_flags_user( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1759:7: error: use of undeclared identifier 'v12'
rtx = v12; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1760:7: error: use of undeclared identifier 'v12'
if ( !v12 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1762:16: error: use of undeclared identifier 'v12'
v2 = ( __int64)v12[2]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1766:35: error: expected ')'
if ( !swap_rtx_condition_1( ( rtx)v2) ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1766:27: note: to match this '('
if ( !swap_rtx_condition_1( ( rtx)v2) ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1772:29: error: expected ')'
swap_rtx_condition_1( ( rtx)v2); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/reg-stack.c:1772:21: note: to match this '('
swap_rtx_condition_1( ( rtx)v2); 
                    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition/src/obj/reg-stack.o] Error 1
